--- a/ECS_Academia/assets/sass/academia/_docs.scss
+++ b/ECS_Academia/assets/sass/academia/_docs.scss
@@ -101,6 +101,7 @@
   padding: .25rem 1rem;
   font-size: .8rem;
   color: rgba(0, 0, 0, .65);
+  /* main : sidebar  */
   
 }
 
@@ -180,14 +181,18 @@
 .docs-toc-link {
   display: block;
   padding-left: .5rem;
-  color: rgba(0, 0, 0, .60);
+ 
   font-size: .8rem;
+  color:#3F69AA;
+  font-weight: bold;
 }
 
 .docs-toc-link:hover {
   color: $sta-primary;
   text-decoration: none;
 }
+
+
 
 .docs-toc-item.active {
   margin-bottom: 1rem;
@@ -196,6 +201,7 @@
 
 .docs-toc-item.active:not(:first-child) {
   margin-top: 1rem;
+  
 }
 
 .docs-toc-item.active>.docs-toc-link {
