--- a/ECS_Academia/assets/sass/academia/_docs.scss
+++ b/ECS_Academia/assets/sass/academia/_docs.scss
@@ -90,7 +90,7 @@
 
 @media (min-width:1200px) {
   .docs-sidebar {
-    flex: 0 1 320px
+    flex: 0 1 350px
   }
 }
 
@@ -98,8 +98,8 @@
 
 .docs-sidebar .nav>li>a {
   display: block;
-  padding: .25rem 1rem;
-  font-size: .8rem;
+  padding: .25rem .5rem;
+  font-size: .75rem;
   color: rgba(0, 0, 0, .65);
   /* main : sidebar  */
   
@@ -136,8 +136,8 @@
 }
 
 .docs-links {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
   margin-right: -15px;
   margin-left: -15px;
 }
@@ -161,8 +161,8 @@
 
 .docs-toc {
   order: 2;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
   font-size: .8rem;
 }
 
@@ -195,12 +195,12 @@
 
 
 .docs-toc-item.active {
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
  
 }
 
 .docs-toc-item.active:not(:first-child) {
-  margin-top: 1rem;
+  margin-top: .5rem;
   
 }
 
@@ -223,8 +223,9 @@
 .docs-toc-title {
   color: #b5b5b5;
   font-size: .8rem;
+ 
   
-  padding-left: calc(1.5rem + 1px);
+  padding-left: calc(1rem + 1px);
  
 }
 
