--- a/ECS_Academia/assets/sass/academia/_root.scss
+++ b/ECS_Academia/assets/sass/academia/_root.scss
@@ -594,69 +594,6 @@ div.alert > div:first-child::before {
 
 
 
-div.alert-warning > div:first-child::before {
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  color: orange;
-  content: '\f06a';
-}
-div.alert-danger > div:first-child::before {
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  color: #cd0930;
-  content: '\f071';
-}
-
-div.alert-success > div:first-child::before {
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  content: '\f058';
-  color: green;  
-}
-div.alert-info > div:first-child::before {
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  content: '\f05a';
-  color: #3F69AA; 
-}
-
-
-.article-style aside a,
-div.alert a {
-  color: currentColor;
-  text-decoration: none;
-  border-bottom: solid 1.5px currentColor;
-}
-
-.article-style aside,
-.alert-note {
-  
-  background-color: #f6fbfe;
-  border-color: #209cee;
-}
-
-.alert-info {
-  background-color:rgba(89, 169, 250, 0.2);
-  border-color: #3F69AA; 
-  color:currentColor;
-  font-weight: 600;
-}
-.alert-success {
-   
-  background-color: #f6fbfe;
-  border-color: green; 
-}
-
-.alert-warning {
-  background-color:#f6fbfe;
-  border-color: #FF9900;
-  color:currentColor;
-  font-weight: 600;
-}
-.alert-danger {
-  color: #cd0930;  
-  border-color: #ff3860;
-}
 
 .article-style aside p,
 div.alert-quotes > div {
@@ -813,10 +750,11 @@ div.alert-warning>div:first-child::before {
 
 div.alert-danger>div:first-child::before {
   font-family: 'Font Awesome 5 Free';
-  font-size: 120%;
+  font-size: 180%;
   font-weight: 900;
   color: #cd0930;
   content: '\f071';
+  margin:1rem auto;
 }
 
 div.alert-success>div:first-child::before {
@@ -847,14 +785,14 @@ div.alert a {
 .article-style aside,
 .alert-note {
 
-  background-color: rgba(47, 101, 182, 0.05);
+  background-color: rgba(47, 101, 182, 0.20);
   border-color: rgb(63, 105, 170);
   padding: 0 auto;
   color: rgba(0,0,0,0.8);
 }
 
 .alert-info {
-  background-color: rgba(63, 105, 170, 0.1);
+  background-color: rgba(63, 105, 170, 0.15);
   border-color: rgb(63, 105, 170);
   color: currentColor;
   padding: 0 auto;
