--- a/ECS_Academia/assets/sass/academia/_root.scss
+++ b/ECS_Academia/assets/sass/academia/_root.scss
@@ -873,3 +873,68 @@ div.alert-note_toc>div>ul>li>a {
   font-weight: bold;
 
 }
+
+/*  Collapsible - Shortcodes */
+
+.collapsible {  
+ 
+  border-radius: 5px;
+  background-color: white;
+  color: rgba(0,0,0,0.7);
+  padding: 0 auto;
+  margin-top:.8em;
+  font-size: 17px;
+  cursor: pointer;
+  font-weight: 600;
+  width: 100%; 
+  text-align: left;
+  box-shadow: 7px 7px 4px grey;
+  border: 3px solid #fc6f5c;
+}
+
+ .collapsible:hover {
+  background-color: #fc6f5c;
+  font-weight: bold;
+  color: white;  
+  border: 3px solid rgba(0,0,0,0.7);
+  box-shadow: 10px 10px 5px grey;
+  
+}
+
+.collapsible:active {
+  background-color: #fc6f5c;
+  color: white;
+  border: 3px solid #fc6f5c;
+ 
+}
+
+.collapsible:after {
+  content: '\002B';
+  color: rgb(255, 56, 96);
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+  font-size:1.3em;
+}
+
+.collapsible:hover:after {
+  content: '\002B';
+  color: white;
+ 
+}
+
+.collapsible .active:after {
+  content: "\2212";
+  
+
+}
+
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: #f1f1f1;
+}
+
+/*  End - Collapsible */
