--- a/ECS_Academia/assets/sass/custom.scss
+++ b/ECS_Academia/assets/sass/custom.scss
@@ -277,7 +277,9 @@ a.book-btn {
   @each $name, $color in $hint-colors {
     &.#{$name} {
       border-left-color: $color;
-      background-color: rgba($color, 0.1);
+      background-color: rgba($color, 0.15);
+      color: rgba(0,0,0,0.85);
+      font-weight: 500;
       // background-color: $gray-100;
     }
   };
