--- a/ECS_Academia/assets/sass/custom.scss
+++ b/ECS_Academia/assets/sass/custom.scss
@@ -29,7 +29,7 @@ $black: #000 !default;
 
 $color-link: #3F69AA !default;
 $color-visited-link: #3F69AA !default;
-$color-hover: #fc6f5c !default;
+$color-hover: #da532c !default;
 
 $body-background: #F5F5F5 !default;
 $body-font-color: #202020 !default;
@@ -49,7 +49,7 @@ $sm-breakpoint: $menu-width + $body-min-width !default;
 $hint-colors: (
   info: #3F69AA,
   warning: #FF6600,
-  danger: #fc6f5c,
+  danger: #b41b06,
   success: green,
 ) !default;
 
