--- a/ECS_Academia/assets/sass/academia/_root.scss
+++ b/ECS_Academia/assets/sass/academia/_root.scss
@@ -164,6 +164,12 @@ em {
   font-weight: bold;
 }
 
+.dask > em {
+  background-color: #3F69AA;
+  font-weight: bold;
+}
+
+
 pre,
 code {
   font-family: $sta-font-mono, monospace;
