--- a/ECS_Academia/assets/sass/academia/_root.scss
+++ b/ECS_Academia/assets/sass/academia/_root.scss
@@ -892,7 +892,8 @@ div.alert-note_toc>div>ul>li>a {
   font-weight: 600;
   padding: 18px ;
   margin-top:1em;
-  width: 100%;
+  margin-right:3em;
+  width: 95%;
   text-align: left; 
   transition: 0.4s;
   box-shadow: 7px 7px 4px grey;
