--- a/ECS_Academia/assets/sass/academia/_widgets.scss
+++ b/ECS_Academia/assets/sass/academia/_widgets.scss
@@ -135,7 +135,7 @@
   animation-delay: 0.25s;
 /* add  */
    font-family: Kanit;
-   min-height: 30rem;
+   min-height: 700px;
    letter-spacing: 0.44px;
 
 }
