--- a/ECS_Academia/layouts/shortcodes/toc.html
+++ b/ECS_Academia/layouts/shortcodes/toc.html
@@ -1,2 +1,5 @@
-<h2>{{ i18n "table_of_contents" }}</h2>
+
+<div class="toc-contents">
+    <h2>{{  "Contents" }}</h2>
 {{ $.Page.TableOfContents }}
+</div>
